--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopline-bulk-node",
   "version": "1.0.0",
-  "description": "Shopline Bulk CSV Order Creator (Node)",
+  "description": "Shopline Bulk CSV Order Creator with Live Logs & Pause/Resume",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -11,7 +11,9 @@
     "csv-parse": "^5.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-fileupload": "^1.5.4",
-    "morgan": "^1.10.0"
+    "express-fileupload": "^1.5.1",
+    "fs-extra": "^11.1.1",
+    "morgan": "^1.10.0",
+    "socket.io": "^4.7.2"
   }
 }
